--- a/app/src/main/res/layout/fragment_account_info.xml
+++ b/app/src/main/res/layout/fragment_account_info.xml
@@ -1,13 +1,70 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mmr.meza.contactsbackup.Fragments.AccountInfo">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="accountinfo" />
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/imageViewAccountInfo"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:background="@mipmap/ic_man" />
+            <TextView
+                android:id="@+id/textView_Account_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageViewAccountInfo"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:text="Majedeur Rahman"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorAsphalt" />
+            <!--
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/textView_Account_name"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:id="@+id/currentContacts"
+                            android:text="Current Contacts :"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
-</FrameLayout>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/textView_Account_name"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="20dp"
+                            android:textColor="@color/pink"
+                            android:layout_toRightOf="@+id/currentContacts"
+                            android:text="2344"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+                 -->
+
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView_Account_name"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/swith_round_activated"
+                android:text=" Auto backup  "
+                android:foreground="?android:attr/selectableItemBackground"
+                android:textColor="@color/colorAsphaltLight"
+                android:theme="@style/SCBSwitch" />
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
