--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorNav"
+        android:background="@color/sweetPink"
         app:itemIconTint="@drawable/color_bnav"
         app:itemTextColor="@drawable/color_bnav"
         app:menu="@menu/bottom_menu"
-
         />
 
     <android.support.v4.view.ViewPager
@@ -25,7 +24,6 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav"
         android:layout_alignParentTop="true">
-
     </android.support.v4.view.ViewPager>
 
 
