--- a/app/src/main/res/layout/fragment_backups.xml
+++ b/app/src/main/res/layout/fragment_backups.xml
@@ -1,16 +1,49 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/frame"
+    android:orientation="vertical"
     tools:context="com.mmr.meza.contactsbackup.Fragments.Backups">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/backup_icon"
+        android:layout_margin="20dp"
+        android:layout_gravity="center"/>
 
     <Button
-        android:id="@+id/buttonOK"
-        android:text="Ok"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Backup in SD Card"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/common_round_button_clickable"
         android:textAllCaps="false"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_margin="5dp"
+        android:id="@+id/backupSdCardButton"
+        android:drawableTint="@color/colorAsphalt"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorCloudWhite" />
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Backup in Cloud"
+        android:layout_margin="5dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/common_round_button_clickable"
+        android:textAllCaps="false"
+        android:id="@+id/backupCloudButton"
+        android:drawableTint="@color/colorAsphalt"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorCloudWhite" />
 
-</FrameLayout>
+</LinearLayout>
+</ScrollView>
