--- a/app/src/main/res/layout/fragment_account_info.xml
+++ b/app/src/main/res/layout/fragment_account_info.xml
@@ -3,13 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mmr.meza.contactsbackup.Fragments.AccountInfo">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/imageViewAccountInfo"
                 android:layout_width="200dp"
@@ -18,6 +21,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
                 android:background="@mipmap/ic_man" />
+
             <TextView
                 android:id="@+id/textView_Account_name"
                 android:layout_width="match_parent"
@@ -60,10 +64,9 @@
                 android:layout_below="@id/textView_Account_name"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/swith_round_activated"
-                android:text=" Auto backup  "
-                android:foreground="?android:attr/selectableItemBackground"
-                android:textColor="@color/colorAsphaltLight"
+                android:background="@drawable/background_switch"
+                android:text="Auto Backup"
+                android:textColor="@drawable/button_color_restore"
                 android:theme="@style/SCBSwitch" />
         </RelativeLayout>
     </LinearLayout>
