--- a/app/src/main/res/layout/fragment_backups.xml
+++ b/app/src/main/res/layout/fragment_backups.xml
@@ -1,49 +1,126 @@
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.mmr.meza.contactsbackup.Fragments.Backups">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/backup_icon"
-        android:layout_margin="20dp"
-        android:layout_gravity="center"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Backup in SD Card"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/common_round_button_clickable"
-        android:textAllCaps="false"
-        android:layout_margin="5dp"
-        android:id="@+id/backupSdCardButton"
-        android:drawableTint="@color/colorAsphalt"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorCloudWhite" />
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Backup in Cloud"
-        android:layout_margin="5dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/common_round_button_clickable"
-        android:textAllCaps="false"
-        android:id="@+id/backupCloudButton"
-        android:drawableTint="@color/colorAsphalt"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorCloudWhite" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+     <!--   <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/backup_icon" />
+-->
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_alignParentTop="true"
+                android:id="@+id/backupSdCardButton"
+                android:layout_width="250dp"
+                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/common_round_button_clickable"
+                android:drawableLeft="@drawable/ic_sd_card_black_24dp"
+                android:drawableTint="@drawable/button_color"
+                android:text="Backup in SD Card"
+                android:textAllCaps="false"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@drawable/button_color" />
+
+            <Button
+                android:id="@+id/backupCloudButton"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:drawableLeft="@drawable/ic_cloud_upload_black_24dp"
+                android:background="@drawable/common_round_button_clickable"
+                android:drawableTint="@drawable/button_color"
+                android:text="Backup in Cloud"
+                android:textAllCaps="false"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/backupSdCardButton"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@drawable/button_color" />
+
+
+            <Button
+                android:id="@+id/ShareEmailButton"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:background="@drawable/common_round_button_clickable"
+                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:drawableTint="@drawable/button_color"
+                android:text="Share With Email"
+                android:textAllCaps="false"
+                android:layout_below="@id/backupCloudButton"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@drawable/button_color" />
+
+
+            <Button
+                android:id="@+id/syncCloudButton"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_below="@+id/ShareEmailButton"
+                android:background="@drawable/common_round_button_clickable"
+                android:drawableLeft="@drawable/ic_cloud_download_black_24dp"
+                android:drawableTint="@drawable/button_color"
+                android:text="Sync from Cloud"
+                android:textAllCaps="false"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@drawable/button_color" />
+
+            <Button
+                android:id="@+id/restoreFromLocalButton"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/common_round_button_clickable"
+                android:drawableLeft="@drawable/ic_restore_page_black_24dp"
+                android:drawableTint="@drawable/button_color"
+                android:text="Restore From SD Card"
+                android:textAllCaps="false"
+                android:layout_below="@+id/syncCloudButton"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@drawable/button_color"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@+id/backupCloudButton"
+                android:layout_alignStart="@+id/backupCloudButton" />
+
+        </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+    </LinearLayout>
 </ScrollView>
