--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,13 +10,13 @@
     <item
         android:id="@+id/contacts_menu"
         android:checked="false"
-        android:icon="@drawable/ic_contacts_black_24dp"
+        android:icon="@drawable/ic_contact_phone_black_24dp"
         android:title="Contacts"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/accountInfo_menu"
         android:checked="false"
-        android:icon="@drawable/ic_account_circle_black_24dp"
-        android:title="Profile"
+        android:icon="@drawable/ic_account_box_black_24dp"
+        android:title="Account"
         app:showAsAction="ifRoom" />
 </menu>
