--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,13 +27,11 @@
     <style name="SCBSwitch" parent="Theme.AppCompat.Light">
         <!-- active thumb & track color (30% transparency) -->
         <item name="colorControlActivated">@color/onGreen</item>
-
         <!-- inactive thumb color -->
-        <item name="colorSwitchThumbNormal">#f1f1f1
+        <item name="colorSwitchThumbNormal">@color/sweetPink
         </item>
-
         <!-- inactive track color (30% transparency) -->
-        <item name="android:colorForeground">#42221f1f
+        <item name="android:colorForeground">@color/sweetPink
         </item>
     </style>
 
