--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorNav">#FFFD1239</color>
 <color name="sweetPink">#FFFA4A54</color>
     <color name="onGreen">#00e661</color>
+    <color name="pinkRed">#e64a47</color>
 </resources>
